# Modern-OpenGL

./: .gitignore  CMakeLists.txt  OpenGL.h  OpenGL.sln  vc140.idb
Client/: Client.cpp  Client.ixx  Client.vcxitems  Client.vcxitems.filters  Framework.cpp  Framework.ixx
FreeGLUT/: Colour.ixx  ColourBrush.ixx  ComponentBrush.ixx  Context.cpp  Context.ixx  DefaultProperty.ixx  DeviceBrush.ixx  DeviceClass.ixx  DeviceColour.cpp  DeviceColour.ixx  DeviceCommand.ixx  DeviceContext.ixx  DeviceCoroutine.ixx  DeviceEvent.ixx  DeviceEventHandler.ixx  DeviceHandle.ixx  DeviceIO.ixx  DeviceIcon.ixx  DeviceMessage.ixx  DeviceUtil.ixx  Display.cpp  Display.ixx  DisplayModes.ixx  Event.ixx  EventAPI.ixx  EventID.ixx  Events.ixx  Framework.ixx  FreeGLUT.ixx  FreeGLUT.vcxproj  FreeGLUT.vcxproj.filters  FreeGlut.cpp  GraphicContext.ixx  IHandle.ixx  IWindowHandle.ixx  Icon.ixx  KeyModifiers.ixx  Keyboard.ixx  KeyboardFlags.ixx  Keycodes.ixx  (+27 more)
FreeGLUTOriginal/: FreeGLUTOriginal.vcxitems  fg_callbacks.c  fg_cmap_mswin.c  fg_cursor.c  fg_cursor_mswin.c  fg_display.c  fg_display_mswin.c  fg_ext.c  fg_ext_mswin.c  fg_font.c  fg_font_data.c  fg_gamemode.c  fg_gamemode_mswin.c  fg_geometry.c  fg_gl2.c  fg_gl2.h  fg_init.c  fg_init.cpp  fg_init_mswin.c  fg_input_devices.c  fg_input_devices_mswin.c  fg_internal.hpp  fg_joystick.c  fg_joystick_mswin.c  fg_main.c  fg_main_mswin.c  fg_menu.c  fg_menu_mswin.c  fg_misc.c  fg_overlay.c  fg_spaceball.c  fg_spaceball_mswin.c  fg_state.c  fg_state_mswin.c  fg_stroke_mono_roman.c  fg_stroke_roman.c  fg_structure.c  fg_structure_mswin.c  fg_teapot.c  (+5 more)
(+197 files in other folders)
